first idea landing page added

--- a/index.html
+++ b/index.html
@@ -2,24 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-        body {
-            text-align: center; /* Center align the content horizontally */
-        }
-
-        div {
-            display: inline-block; /* Make the div behave like an inline element */
-            text-align: left; /* Reset text alignment to left for the div content */
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Earth Day Events Directory</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <div>
-        <h1>Start working guys !</h1>
+    <div class="container">
+        <h1>Discover Earth Day Events Near You</h1>
+        <p>Find and participate in local Earth Day events, clean-up activities, tree planting initiatives, workshops, and more.</p>
+        <a href="earth_day_events.html" class="btn">Explore Events</a>
     </div>
 </body>
 
