second page added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h1>Discover Earth Day Events Near You</h1>
         <p>Find and participate in local Earth Day events, clean-up activities, tree planting initiatives, workshops, and more.</p>
-        <a href="earth_day_events.html" class="btn">Explore Events</a>
+        <a href="index_2.html" class="btn">Explore Events</a>
     </div>
 </body>
 
