nearly changed the repo

--- a/index.html
+++ b/index.html
@@ -4,16 +4,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Earth Day Events Directory</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
-        <h1>Discover Earth Day Events Near You</h1>
-        <p>Find and participate in local Earth Day events, clean-up activities, tree planting initiatives, workshops, and more.</p>
-        <a href="index_2.html" class="btn">Explore Events</a>
+        <div id="nav">
+            <div id="menu">
+                <a href="#">HOME/</a>
+                <a href="#">EVENTS/</a>
+                <a href="#">ABOUT US/</a>
+                <a href="#">CONTACT</a>
+            </div>
+            <div id="logo">
+                <img src="13-removebg-preview.png" alt="" width="50vw">
+            </div>
+            <div id="search">
+                <input id="bar" type="text" placeholder="Search...">
+            </div>
+        </div>
+
+        <div class="page1">
+            <div class="separate">
+            </div>
+            <div id="green">
+                GREEN
+            </div>
+            <div id="filler">
+                <h2>“Our land. Our future. We are #GenerationRestoration.”</h2>
+            </div>
+            <div id="gazette">
+                GAZETTE
+            </div>
+            <button>
+                REGISTER YOUR EVENT>
+            </button>
+
+        </div>
+        <button id="chat">
+            <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                style="border-radius: 0px; fill: rgb(31, 31, 31); width: 26px; height: 26px; flex-shrink: 0;">
+                <path
+                    d="M3.654 4h24.692C29.846 4 31 5.249 31 6.61v15.666c0 1.475-1.154 2.61-2.654 2.61H20.27l-3.115 4.768a1.415 1.415 0 01-2.308 0l-3.115-4.768H3.654C2.269 24.886 1 23.751 1 22.276V6.61C1 5.249 2.27 4 3.654 4zm4.79 8.438c1.022 0 1.931.795 1.931 1.818 0 1.022-.91 1.931-1.932 1.931-1.023 0-1.818-.909-1.818-1.931 0-1.023.795-1.819 1.818-1.819zm7.556 0c1.055 0 1.875.795 1.875 1.818 0 1.022-.82 1.931-1.875 1.931-1.055 0-1.875-.909-1.875-1.931 0-1.023.82-1.819 1.875-1.819zm7.5 0c1.055 0 1.875.795 1.875 1.818 0 1.022-.82 1.931-1.875 1.931-1.055 0-1.875-.909-1.875-1.931 0-1.023.82-1.819 1.875-1.819z"
+                    fill="currentColor" fill-rule="evenodd"></path>
+            </svg> LET'S CHAT!
+        </button>
+        <div class="page2">
+            <div id="box1">
+                <h1>ARE YOU READY </h1>
+                <h1>TO CHANGE THE </h1>
+                <h1>WORLD?</h1>
+                <h4>"IF YOU WANT TO CHANGE
+
+                    THE WORLD,
+
+                    YOU HAVE TO CHANGE
+
+                    YOUR COUNTRY
+
+                    FIRST."</h4>
+                <img id="image" src="01c3aff52f2a4dffa526d7a9843d46ea.png" alt="" width="30px">
+            </div>
+            <div id="box2">
+                <h1>#GenerationRestoration</h1>
+                <h4>We cannot turn back time, but we can grow forests, revive water sources, and bring back soils. We
+                    are the generation that can make peace with land.</h4>
+            </div>
+        </div>
+        <div class="page3">
+            <div id="box1">
+                HIGHLIGHTS
+            </div>
+            <div id="box2">
+                <div class="mb2">
+                <div id="ssb1">
+                    <div class="circles">
+                        <div id="c1">
+                            1
+                        </div>
+                        <div id="c2">
+                            2
+                        </div>
+                        <div id="c3">
+                            3
+                        </div>
+                    </div>
+                </div>
+                <div id="ssb2">
+                    <div id="sb1"></div>
+                    <div id="sb2"></div>
+                    <div id="sb3"></div>
+                </div>
+            </div>
+            </div>
+        </div>
     </div>
+
 </body>
 
 </html>
